css/index.css
a:hover {
  background: #eee;
}

.bias-page {
  display: none;
}

.source-graph {
  display: none;
}

#reg-button {
    width: 6em;
    border: 2px solid black;
    background: grey;
    border-radius: 5px;
}

#logout-button {
    width: 6em;
    border: 2px solid black;
    background: grey;
    border-radius: 5px;
    position: relative;
    top: -37px;
    right: 0px;
    height: 50px;
    text-align: right;
    padding-top: 5px;
    margin-left: 92%;
    display: inline-block;
    float: right;
}

#reg-button a {
    display: block;
    width: 100%;
    line-height: 2em;
    text-align: center;
    text-decoration: none;
    border-radius: 5px;
    color: white;
}
#reg-button a:hover {
    color: white;
    background: #d4c9ff;
}

#logout-button a {
    display: block;
    width: 100%;
    line-height: 2em;
    text-align: center;
    text-decoration: none;
    border-radius: 5px;
    color: white;
    height: 48px;
    margin-top: -6px;
}

#logout-button a:hover {
    color: white;
    background: #d4c9ff;
}


svg {
	margin-bottom: 10px;
}

.source {
	display: none;
}

.head-bar {
  height: 50px;
  width: 100%;
  background-color: #CDC9C9;
  position: relative;

}
#welcome{
  position: relative;
  text-align: right;
  margin-right: 200px;
  font-size: 25px;
  display: inline-block;

}

#profile-picture {
	position: relative;
}

#profile-picture img{
	height: 50px;
  background-color: #d4c9ff;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
  position: relative;
  float: right;
  background: #eee;
  border-bottom: 1px solid #fff;
      
}

nav li {
  float: left;          
}

nav #login {
  border-right: 1px solid #ddd;
  box-shadow: 1px 0 0 #fff;  
}

nav #login-trigger,
nav #signup a {
  display: inline-block;
  *display: inline;
  *zoom: 1;
  line-height: 25px;
  font-weight: bold;
  padding: 5px 5px 5px 5px;
  text-decoration: none;
  color: #444;
  text-shadow: 0 1px 0 #fff; 
}

nav #signup a {
  border-radius: 0 3px 3px 0;
}

nav #login-trigger {
  border-radius: 3px 0 0 3px;
}

nav #login-trigger:hover,
nav #login .active,
nav #signup a:hover {
  background: #fff;
}

nav #login-content {
  display: none;
  position: absolute;
  top: 50px;
  right: 0;
  z-index: 999;    
  background: #fff;
  background-image: linear-gradient(top, #fff, #eee);  
  padding: 15px;
  box-shadow: 0 2px 2px -1px rgba(0,0,0,.9);
  border-radius: 3px 0 3px 3px;
}

nav li #login-content {
  right: 0;
  width: 250px;  
}

/*--------------------*/

#inputs input {
  background: #f1f1f1;
  padding: 6px 5px;
  margin: 0 0 5px 0;
  width: 238px;
  border: 1px solid #ccc;
  border-radius: 3px;
  box-shadow: 0 1px 1px #ccc inset;
}

#inputs input:focus {
  background-color: #fff;
  border-color: #e8c291;
  outline: none;
  box-shadow: 0 0 0 1px #e8c291 inset;
}

/*--------------------*/

#login #actions {
  margin: 10px 0 0 0;
}

#login #submit {    
  background-color: #d14545;
  background-image: linear-gradient(top, #e97171, #d14545);
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  text-shadow: 0 1px 0 rgba(0,0,0,.5);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3) inset;    
  border: 1px solid #7e1515;
  float: left;
  height: 30px;
  padding: 0;
  width: 100px;
  cursor: pointer;
  font: bold 14px Arial, Helvetica;
  color: #fff;
}

#profile-pic img{
  position: relative;
  height: 300px;
  width: 300px;
  border: 2px solid lightgrey;
  padding-bottom: 1px;
  margin-top: 10%;
  margin-left: 25%;
}

#articles{
  position: relative;
  margin-top: 10%;
  margin-right: 25%;
  text-align: center;
}

#graphTitle{
  text-align: center;
}

#notice{
  text-align: center;
  color: gray;
  font-size: 10px;
}

#graph{
  height:800px;
  width: 800px;
  margin-top: 5%;
}

#home img{
  position: absolute;
  top: 0px;
  right: 10px;
  height: 50px;
  background-color: #d4c9ff;
  border-radius: 10px;
  border: 2px solid black;
}

